2004-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/Makefile.am:
	  only rebuild docs when source module files change

2004-08-12  Johan Dahlin  <johan@gnome.org>

	* tests/test_component_parse.py: import common
	* tests/test_http.py: New test

2004-08-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/components/http.py:
	  implement getrlimit and fd reservation

2004-08-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/server/admin.py:
	* flumotion/server/component.py:
	* flumotion/server/config.py:
	* flumotion/server/controller.py:
	* flumotion/server/launcher.py:
	  adapt debugging

2004-08-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/gui/adminclient.py:
	  throw up a dialog if we can't connect
	* flumotion/utils/log.py:
	  make logging similar to GStreamer's

2004-08-11  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/config.py (FlumotionConfigXML.parseProperties):
	Add support for float values

	* flumotion/components/multipartjpeg.py (createComponent): New component

	* flumotion/server/config.py (FlumotionConfigXML.parse_entry):
	Clean up

	* flumotion/server/registry.py
	(RegistryXmlParser.parse_component): Implement inheritence

	* flumotion/components/http.py: Clean up
	(HTTPStreamingResource.render): Refactor different results here

	* flumotion/components/overlay.py: New component

	* flumotion/server/config.py (ConfigEntry): Rename to sort out things

	* flumotion/server/auth.py: Authentication helper functions

	* flumotion/components/passwd.py (HTTPGatekeeper): New gatekeeper,
	for htpasswd (from apache), only supports crypt encryption right now

	* flumotion/components/http.py (HTTPClientKeycard): New
	IClientKeycard implementation for twisted http requests

	* flumotion/server/interfaces.py (IClientKeycard) 
	(IAuthenticate): New file with two interfaces

	* conf/videotest-jpeg.xml: Add auth component
